[package]
name = "cache-any"
version = "1.1.0"
edition = "2021"
description = "A cache library for Rust"
license = "MIT"
repository = "https://github.com/caojen/cache-any"
readme = "README.md"
keywords = ["cache", "async"]
resolver = "2"
authors = ["caojen <caojen@gmail.com>"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = [ "full" ]
full = [
    "redis",
    "mysql",
]
mysql = [ "sqlx" ]

[dependencies]
async-trait = { version = "0.1" }
tokio = { version = "1.41", features = ["sync"] }
hex = { version = "0.4" }
byteorder = { version = "1.5", features = ["i128"] }
anyhow = { version = "1.0" }
redis = { version = "0.27.5", features = ["tokio-comp", "tokio-rustls-comp", "aio"], optional = true }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "mysql"], optional = true }

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }
rand = { version = "0.8.5" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
